updates the css files with corrections to the font awesome icons not showing

--- a/assets/css/movers.css
+++ b/assets/css/movers.css
@@ -1,3 +1,7 @@
+/* Font Import */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
+
 /* Navigation Bar */
 .navigation {
     background-color: black;
@@ -25,6 +29,14 @@ nav > .navLinks > ul > li > a {
     color: white;
     padding-left: 180px;
     padding-right: 180px;
+}
+
+.headerText h3 {
+    font-size: 30px;
+}
+
+.headerText h6 {
+    font-size: 15px;
 }
 
 .workWithUs {
